syntax = "proto3";

package grpcsh;
option go_package = "grpcsh/pb";

message Message {
  string from = 1;
  string to = 2;
  Flag flag = 3;
  bytes data = 4;
}

message Result {
  string from = 1;
  string to = 2;
  Flag flag = 3;
  bytes data = 4;
}

message PeerMessage {
  string channel = 1;
  string from = 2;
  string to = 3;
  Flag flag = 4;
  bytes data = 5;
}

enum Flag {
  NONE = 0;
  COMMAND = 1;
  MSG_STDIN = 2;
  MSG_STDOUT = 3;
  MSG_STDERR = 4;
  EOF_STDIN = 5;
  EOF_STDOUT = 6;
  EOF_STDERR = 7;
}
